Added focus button and focus reference

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -6409,6 +6409,10 @@ strong {
                         content: '\E358';
                     }
 
+                    &.focus:before {
+                        content: '\E335';
+                    }
+
                     &.slice:before {
                         content: '\E332';
                     }
