Change Slice frames to Generate frames

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -6418,7 +6418,7 @@ strong {
                         content: '\E335';
                     }
 
-                    &.slice:before {
+                    &.generate:before {
                         content: '\E332';
                     }
                 }
