--- a/editor/sass/launch.scss
+++ b/editor/sass/launch.scss
@@ -18,12 +18,12 @@ $rotation-period: 5s;
 
 @font-face {
     font-family: 'pc-icon';
-    src: url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/pcicon-regular.eot');
-    src: url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/pcicon-regular.eot?#iefix') format('embedded-opentype'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/pcicon-regular.woff2') format('woff2'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/pcicon-regular.woff') format('woff'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/pcicon-regular.ttf') format('truetype'),
-         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/pcicon-regular.svg#playicons8regular') format('svg');
+    src: url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/PlayIcons-Regular.eot');
+    src: url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/PlayIcons-Regular.eot?#iefix') format('embedded-opentype'),
+         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/PlayIcons-Regular.woff2') format('woff2'),
+         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/PlayIcons-Regular.woff') format('woff'),
+         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/PlayIcons-Regular.ttf') format('truetype'),
+         url('https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/fonts/PlayIcons-Regular.svg') format('svg');
 
     font-weight: normal;
     font-style: normal;
