Added related sprite assets panel when selecting a frame in the sprite editor

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -1488,6 +1488,9 @@ strong {
                 &.type-script:before {
                     content: '\E392';
                 }
+                &.type-sprite:before {
+                    content: '\E395';
+                }
                 &.type-texture:before {
                     content: '\E201';
                 }
