Added icon to add frames to sprite info box, Changed font-weight of icons in wide buttons to 100

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -6262,6 +6262,16 @@ strong {
                         > .ui-header {
                             background: transparent;
                             padding: 0;
+
+                            &:before {
+                                @extend .font-icon;
+                                content: '\E400';
+                                float: left;
+                                margin-right: 5px;
+                                margin-left: -3px;
+                                font-size: 20px;
+                                font-weight: 100;
+                            }
                         }
 
                         .ui-label {
@@ -6418,6 +6428,7 @@ strong {
                         text-align: center;
                         margin-left: -18px;
                         margin-right: 9px;
+                        font-weight: 100;
                     }
 
                     &.create:before {
