--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -5855,13 +5855,9 @@ strong {
                         text-align: center;
                         height: 24px;
                         line-height: 24px;
-                        width: 24px;
-                        min-width: 14px;
+                        min-width: 24px;
                         margin: 3px 0px;
 
-                        & + .ui-button.picker-curve-toggle {
-                            border-right: none;
-                        }
                         &.active.first {
                             color: rgb(255, 0, 0);
                         }
@@ -5872,7 +5868,6 @@ strong {
                             color: rgb(133, 133, 252);
                         }
                     }
-
                 }
             }
 
@@ -8312,7 +8307,6 @@ strong {
     }
 }
 
-
 .ui-panel.picker-checkpoint-new {
     &.disabled {
         opacity: 0.5;
@@ -8521,5 +8515,19 @@ strong {
         font-size: 13px;
         line-height: 18px;
         border-bottom: 2px solid $bcg-darker;
+    }
+}
+
+.ui-panel.attributes-array {
+    > .content {
+        padding: 0;
+        flex-grow: 1;
+        flex-direction: column;
+
+        .ui-panel.attributes-array-elements {
+            > .content {
+                flex-direction: column;
+            }
+        }
     }
 }
