checkpoint notice z-index higher than picker

--- a/editor/sass/checkpoint-overlay.scss
+++ b/editor/sass/checkpoint-overlay.scss
@@ -1,6 +1,8 @@
 @import 'fonts';
 
 .checkpoint-overlay {
+    z-index: 400;
+
     > .content {
         width: 512px;
         position: absolute;
